feat(colors): overhaul color system with semantic variables, dark mode, tints/shades, and documentation
- Added semantic color variables for primary, secondary, accent, status, and neutrals
- Implemented tints and shades for primary/secondary colors
- Added dark mode support with full variable set
- Renamed grays to --neutral-XX for clarity
- Added CSS variable fallbacks for robustness
- Included a documentation block for maintainability
- Updated font-family to use --font-geist-sans variable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,8 @@
     "titleBar.inactiveBackground": "#8ade5b99",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#8ade5b"
+  "peacock.color": "#8ade5b",
+  "cSpell.words": [
+    "oklch"
+  ]
 }
